add PGGSSENCMODE to fix supabase error

--- a/notebooks/3 - supabase weather.ipynb
+++ b/notebooks/3 - supabase weather.ipynb
@@ -20,6 +20,7 @@
     "from dotenv import load_dotenv\n",
     "load_dotenv()\n",
     "\n",
+    "os.environ['PGGSSENCMODE'] = 'disable'\n",
     "password = urllib.parse.quote_plus(os.environ['SUPABASE_DB_PASSWORD'])\n",
     "engine = create_engine( \n",
     "    f\"postgresql+psycopg2://postgres.vcadeeaimofyayyevakl:{password}@aws-0-us-east-1.pooler.supabase.com:6543/postgres\") "
